force-app/main/default/objects/Pricing_Cube__c/Pricing_Cube__c.object-meta.xml
<CustomObject>
    <description>captures all necessary data as a reference for payment calculations related to PPAs, leases, and loans</description>
    <label>Pricing Cube</label>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Pricing Cube Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Cubes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>