force-app/main/default/objects/Pricing_Cube__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the pricing rate is currently active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>