force-app/main/default/objects/Pricing_Cube__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <inlineHelpText>Annual interest rate applied to the loan</inlineHelpText>
    <label>APR</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>