force-app/main/default/objects/Pricing_Cube__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this pricing term is eligible on sales with a battery</inlineHelpText>
    <label>Battery</label>
    <type>Checkbox</type>
</CustomField>