force-app/main/default/objects/Pricing_Cube__c/fields/Dealer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee__c</fullName>
    <label>Dealer Fee</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>