force-app/main/default/objects/Pricing_Cube__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>More details about the pricing detail and where/how it applies</inlineHelpText>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>