force-app/main/default/objects/Pricing_Cube__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The date when the pricing terms end (if applicable).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>