force-app/main/default/objects/Pricing_Cube__c/fields/Escalator__c.field-meta.xml
<CustomField>
    <fullName>Escalator__c</fullName>
    <inlineHelpText>The annual percentage increase applied to the pricing rate.</inlineHelpText>
    <label>Escalator</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>