force-app/main/default/objects/Pricing_Cube__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Financier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Cubes</relationshipLabel>
    <relationshipName>Pricing_Cubes</relationshipName>
    <type>Lookup</type>
</CustomField>