force-app/main/default/objects/Pricing_Cube__c/fields/Financier_text__c.field-meta.xml
<CustomField>
    <fullName>Financier_text__c</fullName>
    <inlineHelpText>The financier associated with the pricing plan (e.g., Enfin).</inlineHelpText>
    <label>Financier (text)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>