force-app/main/default/objects/Pricing_Cube__c/fields/Payment_Factor_2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Factor_2__c</fullName>
    <inlineHelpText>Payment multiplier for the term after the introductory period is over</inlineHelpText>
    <label>Payment Factor 2</label>
    <precision>9</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>