force-app/main/default/objects/Pricing_Cube__c/fields/Payment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Factor__c</fullName>
    <inlineHelpText>Payment multiplier for the introductory period of the term</inlineHelpText>
    <label>Payment Factor 1</label>
    <precision>9</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>