force-app/main/default/objects/Pricing_Cube__c/fields/PPW__c.field-meta.xml
<CustomField>
    <fullName>PPW__c</fullName>
    <label>PPW</label>
    <precision>17</precision>
    <scale>14</scale>
    <type>Currency</type>
</CustomField>