force-app/main/default/objects/Pricing_Cube__c/fields/Price_per_kWh__c.field-meta.xml
<CustomField>
    <fullName>Price_per_kWh__c</fullName>
    <inlineHelpText>The pricing rate per kilowatt-hour for the solar system.</inlineHelpText>
    <label>Price per kWh</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>