force-app/main/default/objects/Pricing_Cube__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>File name of the document used to create the price point.</inlineHelpText>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>