force-app/main/default/objects/Pricing_Cube__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The date when the pricing terms start applying.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>