force-app/main/default/objects/Pricing_Cube__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <inlineHelpText>Length of the loan, lease or PPA Term in months</inlineHelpText>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>