force-app/main/default/objects/Pricing_Cube__c/fields/Utility_text__c.field-meta.xml
<CustomField>
    <fullName>Utility_text__c</fullName>
    <description>Utility provider associated with the pricing terms</description>
    <label>Utility (text)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>