force-app/main/default/objects/Pricing_Cube__c/fields/Yield_Factor__c.field-meta.xml
<CustomField>
    <fullName>Yield_Factor__c</fullName>
    <inlineHelpText>Represents the solar energy production in kWh per kWp installed.</inlineHelpText>
    <label>Yield Factor (kWh/kWp)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>