force-app/main/default/objects/Pricing_Cube__c/recordTypes/Cash.recordType-meta.xml
<RecordType>
    <fullName>Cash</fullName>
    <active>true</active>
    <description>Consumer funded. $1000 due at signing, remainder at install</description>
    <label>Cash</label>
</RecordType>