force-app/main/default/objects/Pricing_Cube__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>Financed purchase, homeowner retained</description>
    <label>Loan</label>
</RecordType>