force-app/main/default/objects/Pricing_Cube__c/recordTypes/TPO.recordType-meta.xml
<RecordType>
    <fullName>TPO</fullName>
    <active>true</active>
    <description>3rd Party Owned (PPA &amp; Lease)</description>
    <label>TPO</label>
</RecordType>