force-app/main/default/objects/Pricing_Cube__c/listViews/Cash_All_Active.listView-meta.xml
<ListView>
    <fullName>Cash_All_Active</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>State__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Term__c</columns>
    <columns>APR__c</columns>
    <columns>Dealer_Fee__c</columns>
    <columns>Payment_Factor_1__c</columns>
    <columns>Payment_Factor_2__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pricing_Cube__c.Cash</value>
    </filters>
    <label>Cash (All Active)</label>
</ListView>