force-app/main/default/objects/Pricing_Cube__c/listViews/Loan_All_Active.listView-meta.xml
<ListView>
    <fullName>Loan_All_Active</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Term__c</columns>
    <columns>APR__c</columns>
    <columns>State__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Dealer_Fee__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pricing_Cube__c.Loan</value>
    </filters>
    <label>Loan - All Active</label>
</ListView>