force-app/main/default/objects/Pricing_Cube__c/listViews/NY_Pricing_Cubes.listView-meta.xml
<ListView>
    <fullName>NY_Pricing_Cubes</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Financier_text__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>NY</value>
    </filters>
    <label>NY Pricing Cubes</label>
</ListView>