force-app/main/default/objects/Pricing_Cube__c/listViews/PPA_Enfin_Active.listView-meta.xml
<ListView>
    <fullName>PPA_Enfin_Active</fullName>
    <columns>NAME</columns>
    <columns>Battery__c</columns>
    <columns>Price_per_kWh__c</columns>
    <columns>Escalator__c</columns>
    <columns>Active__c</columns>
    <columns>PPW__c</columns>
    <columns>State__c</columns>
    <columns>Utility_text__c</columns>
    <columns>Yield_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Financier_text__c</field>
        <operation>equals</operation>
        <value>Enfin</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pricing_Cube__c.TPO</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>FL</value>
    </filters>
    <label>PPA - Enfin Active</label>
</ListView>